--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body{
 .header{
     background:#676F7A;
     width:100%;
-    height:15vh;
+    height:10%;
     padding:10px;
     padding-top: 5px;
 }
@@ -23,7 +23,7 @@ body{
     font-family: 'Courier New', monospace;
     font-weight: 600;
     margin: 20px 0 0 5%;
-    font-size: 36px;
+    font-size: 300%;
     color: #14171b;
 }
 .header .contact{
@@ -36,7 +36,7 @@ body{
     border-radius: 30px;
     text-decoration: none;
     margin: 20px 2% 0 0;
-    font-size: 24px;
+    font-size: 160%;
     color: white;
 }
 .content{
@@ -50,7 +50,7 @@ body{
     margin-left: 5%;
 
     font-family: Tahoma, sans-serif;
-    font-size: 48px;
+    font-size: 350%;
 }
 .content .second{
     float: right;
