--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-x: visible;
+    overflow-y: visible;
     scroll-behavior: smooth;
 }
 body{
@@ -43,12 +43,13 @@ body{
     width:100%;
     height:85vh;
     display: inline-block;
+    scroll-snap-type: y mandatory;
 }
 .content .main{
     width:45%;
     float: left;
     margin-left: 5%;
-    padding-top: 10%;
+    padding-top: 12.5%;
     
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: 800;
@@ -84,7 +85,26 @@ body{
     filter:drop-shadow(0px 0px 5px #676F7A)
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1200px) {
+    .content .main{
+        float: none;
+        width: 100%;
+        font-size: 400%;
+        text-align: center;
+
+        margin-left: 0;
+        padding-top:10%;
+    }
+    .content .second{
+        width: 100%;
+        font-size: 150%;
+        text-align: center;
+
+        margin-right: 0;
+        padding-top:5%;
+    }
+}
+@media screen and (max-width: 800px) {
     .header .name{
         font-size: 200%;
         margin-left: 0;
@@ -101,7 +121,7 @@ body{
         text-align: center;
         margin-left: 0;
         padding-top:10%;
-        font-size: 200%;
+        font-size: 300%;
     }
     .content .second{
         width: 100%;
