--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body{
 }
 .content{
     width:100%;
-    height:85vh;
+    height:100vh;
     display: inline-block;
     scroll-snap-type: y mandatory;
 }
@@ -70,9 +70,43 @@ body{
 }
 
 .falecmg {
-    width:100%;
+    align-items: center;
     height:80vh;
+    width:100%;
 }
+.falecmg .twitter{
+    background-color: black;
+    margin: 2% 1% 0% 24%;
+    float: left;
+
+    height: 25%;
+    width: 25%;}
+.falecmg .discord{
+    background-color: black;
+    margin: 2% 24% 0% 1%;
+    float: right;
+
+    height: 25%;
+    width: 25%;
+}
+.falecmg .github{
+    background-color: black;
+    margin: 2% 1% 1% 24%;
+    float: left;
+
+    height: 25%;
+    width: 25%;
+
+}
+.falecmg .email{
+    background-color: black;
+    margin: 1% 24% 1% 1%;
+    float: right;
+
+    height: 25%;
+    width: 25%;
+}
+
 .footer {
     width:100%;
     height:20vh;
