--- a/css/styles.css
+++ b/css/styles.css
@@ -24,21 +24,21 @@ body{
     margin: 20px 0 0 5%;
     color: #14171b;
     font-weight: 600;
-    font-size: 3em;
+    font-size: 3rem;
     float: left;
 }
 #header .contact{
     font-family: 'Trebuchet MS', sans-serif;
-    background: #22272E;
-    border: 2px solid #22272E;
     box-shadow: 0px 0px 20px 0px #22272E;
+    border: 2px solid #22272E;
     padding: 5px 13px 5px 15px;
-    float: right;
-    border-radius: 30px;
+    background: #22272E;
     text-decoration: none;
+    border-radius: 30px;
     margin: 20px 2% 0 0;
-    font-size: 2em;
+    font-size: 2rem;
     color: white;
+    float: right;
 }
 
 
@@ -57,7 +57,7 @@ body{
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: 800;
     font-style: normal;
-    font-size: 5em;
+    font-size: 5rem;
 }
 .content .second{
     width: 45%;
@@ -69,31 +69,52 @@ body{
     text-align: right;
 
     font-family: Tahoma, sans-serif;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 
 #falecmg {
     justify-content: center;
     align-content: center;
-    display: inline-grid;
+    padding-top: 10%;
     grid-gap: 10px;
-
+    display: inline-grid;
     width:100%;
-    height:85vh;
-
-    text-align: center;
+    height:80vh;
 }
 #falecmg *{
     font-family: "Poppins", sans-serif;
+    text-decoration: none;
     border-radius: 10px;
-    font-size: 1.5em;
+    font-size: 3rem;
     height: 175px;
     width: 400px;
 }
 #falecmg * h2{
-    position: relative;
-    margin-top: 16%;
+    height: min-content;
+    width: auto;
+
+    padding-top:13%;
+    padding-right:20%;
+    color:black;
+    float: right;
+}
+#falecmg .instagram h2{
+    padding-right:30%;
+}
+#falecmg .email h2{
+    padding-right:25%;
+}
+#falecmg * img{
+    text-align: none;
+    width: 3rem;
+    height:3rem;
+
+    margin-left: 20%;
+    margin-top: 13%;
+}
+#falecmg a:hover {
+    box-shadow: inset 0 0 2px 2px #eee;
 }
 #falecmg .twitter{
     grid-column-start: 1;
@@ -102,10 +123,7 @@ body{
     background: rgb(21,118,179);
     background: linear-gradient(135deg, rgba(21,118,179,1) 0%, rgba(29,161,242,1) 30%, rgba(31,169,255,1) 100%);
 }
-#falecmg .twitter:hover {
-    box-shadow: inset 0 0 2px 2px #eee;
-}
-#falecmg .discord{
+#falecmg .instagram{
     grid-column-start: 2;
     grid-row-start: 1;
 
@@ -118,18 +136,12 @@ body{
         #cc2366 75%,
         #bc1888 100%)
 }
-#falecmg .discord:hover {
-    box-shadow: inset 0 0 2px 2px #eee;
-}
 #falecmg .github{
     grid-column-start: 1;
     grid-row-start: 2;
 
     background: rgb(29,122,51);
     background: linear-gradient(90deg, rgba(29,122,51,1) 0%, rgba(45,187,79,1) 30%, rgba(48,199,83,1) 100%); 
-}
-#falecmg .github:hover {
-    box-shadow: inset 0 0 2px 2px #eee;
 }
 #falecmg .email{
     grid-column-start: 2;
@@ -138,29 +150,19 @@ body{
     background: rgb(212,23,17);
     background: linear-gradient(135deg, rgba(212,52,47,1) 0%, rgba(199,22,16,1) 70%, rgba(135,15,11,1) 100%); 
 }
-#falecmg .email:hover {
-    box-shadow: inset 0 0 2px 2px #eee;
-}
-
 
 .footer {
-    height:15vh;
-    width:100%;
-}
-.footer a{
     filter:drop-shadow(0px 0px 5px #676F7A);
-    padding-top: 30px;
-    padding-right: 3%;
     color: #676F7A;
-    float: right;
+    float:right;
+    padding:0 3% 3% 0;
 }
-
 
 @media screen and (max-width: 1200px) {
     .content .main{
         float: none;
         width: 100%;
-        font-size: 400%;
+        font-size: 5rem;
         text-align: center;
 
         margin-left: 0;
@@ -168,7 +170,7 @@ body{
     }
     .content .second{
         width: 100%;
-        font-size: 150%;
+        font-size: 1.5rem;
         text-align: center;
 
         margin-right: 0;
@@ -177,12 +179,12 @@ body{
 }
 @media screen and (max-width: 800px) {
     #header .name{
-        font-size: 200%;
+        font-size: 2rem;
         margin-left: 0;
         padding-top: 0;
     }
     #header .contact{
-        font-size: 100%;
+        font-size: 1rem;
     }
 
     .content .main{
@@ -192,11 +194,11 @@ body{
         text-align: center;
         margin-left: 0;
         padding-top:10%;
-        font-size: 300%;
+        font-size: 3rem;
     }
     .content .second{
         width: 100%;
-        font-size: 100%;
+        font-size: 1rem;
         text-align: center;
 
         margin-right: 0;
@@ -204,14 +206,15 @@ body{
     }
 
     #falecmg *{
-        height: 150px;
-        width: 340px;
+        height: 100px;
+        width: 320px;
+        font-size: 2rem;
     }
     #falecmg .twitter{
         grid-row-start: 1;
         grid-column-start: 1;
     }
-    #falecmg .discord{
+    #falecmg .instagram{
         grid-row-start: 2;
         grid-column-start: 1;
     }
@@ -222,5 +225,52 @@ body{
     #falecmg .email{
         grid-row-start: 4;
         grid-column-start: 1;
+    }
+    #falecmg * h2{
+        padding-top:10%;
+        padding-right:20%;
+        color:black;
+        float: right;
+    }
+    #falecmg .instagram h2{
+        padding-right:28%;
+    }
+    #falecmg .email h2{
+        padding-right:25%;
+    }
+    #falecmg * img{
+        text-align: none;
+        width: 2rem;
+        height:2rem;
+    
+        margin-left: 20%;
+        margin-top: 10%;
+    }
+}
+
+@media screen and (max-height: 600px) {
+    .content .main{
+        font-size: 4rem;
+        margin-left: 0;
+        padding-top:0%;
+    }
+    .content .second{
+        font-size: 1.5rem;
+        padding-top:2%;
+    }
+    #falecmg {
+        padding-top: 0;
+        grid-gap: 10px;
+        height: 80vh;
+    }
+    #falecmg *{
+        height:125px;
+        width: 300px;
+        font-size: 2.3rem;
+    }
+    #falecmg * img{
+        text-align: none;
+        width: 2.3rem;
+        height:2.3rem;
     }
 }
