--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,6 @@ body{
     padding-right:25%;
 }
 #falecmg * img{
-    text-align: none;
     width: 3rem;
     height:3rem;
 
@@ -168,7 +167,7 @@ body{
     padding:0 3% 3% 0;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
     .content .main{
         float: none;
         width: 100%;
@@ -187,7 +186,7 @@ body{
         padding-top:5%;
     }
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
     #header .name{
         font-size: 2rem;
         margin-left: 0;
@@ -249,7 +248,6 @@ body{
         padding-right:25%;
     }
     #falecmg * img{
-        text-align: none;
         width: 2rem;
         height:2rem;
     
@@ -258,29 +256,32 @@ body{
     }
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-width: 320px) {
+    #header .name{
+        font-size: 1.5rem;
+    }
     .content .main{
-        font-size: 4rem;
+        font-size: 3rem;
         margin-left: 0;
-        padding-top:0%;
+        padding-top:5%;
     }
     .content .second{
-        font-size: 1.5rem;
-        padding-top:2%;
+        font-size: 1rem;
+        padding-top:5%;
     }
     #falecmg {
         padding-top: 0;
-        grid-gap: 10px;
+        grid-gap: 5px;
         height: 80vh;
     }
     #falecmg *{
-        height:125px;
-        width: 300px;
-        font-size: 2.3rem;
+        padding-top: 5px;
+        height:100px;
+        width: 240px;
+        font-size: 1.5rem;
     }
     #falecmg * img{
-        text-align: none;
-        width: 2.3rem;
-        height:2.3rem;
+        width: 1.5rem;
+        height:1.5rem;
     }
 }
