--- a/css/styles.css
+++ b/css/styles.css
@@ -28,22 +28,24 @@ body{
 }
 #header .name{
     font-family: 'Courier New', monospace;
+    font-size:calc(12px + 2vw);
+    font-weight: 600;
+
     margin: 20px 0 0 5%;
     color: #14171b;
-    font-weight: 600;
-    font-size: 3rem;
     float: left;
 }
 #header .contact{
     font-family: 'Trebuchet MS', sans-serif;
+    font-size:calc(12px + 1.25vw);
+    text-decoration: none;
+
     box-shadow: 0px 0px 20px 0px #434142;
     border: 2px solid #434142;
     padding: 5px 13px 5px 15px;
     background: #434142;
-    text-decoration: none;
     border-radius: 30px;
     margin: 20px 2% 0 0;
-    font-size: 2rem;
     color: white;
     float: right;
 }
@@ -64,7 +66,7 @@ body{
     font-family: 'Helvetica Neue', sans-serif;
     font-style: normal;
     font-weight: 800;
-    font-size: 5rem;
+    font-size: 5.5vw;
     color:black;
 }
 .content .second{
@@ -77,7 +79,7 @@ body{
     text-align: right;
 
     font-family: Tahoma, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.6vw;
     color:#333;
 }
 
@@ -85,7 +87,7 @@ body{
 #falecmg {
     justify-content: center;
     align-content: center;
-    padding-top: 10%;
+    padding-top: 0;
     grid-gap: 10px;
     display: inline-grid;
     width:100%;
