--- a/css/styles.css
+++ b/css/styles.css
@@ -15,53 +15,50 @@
 }
 body{
     background: linear-gradient(0deg,#F2D264 0%,#FDD540 100%); 
-    justify-content: center;
     min-height: 100vh;
 }
 
 
 #header{
-    width:100%;
-    height:10%;
-    padding:10px;
-    padding-top: 5px;
+    width:100vw;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 #header .name{
-    font-family: 'Courier New', monospace;
+    font-family: 'Helvetica Neue', sans-serif;
     font-size:calc(12px + 2vw);
     font-weight: 600;
-
-    margin: 20px 0 0 5%;
-    color: #14171b;
-    float: left;
+    margin: 5vh 6vw;
+    color: black;
 }
-#header .contact{
+#header .talk{
     font-family: 'Trebuchet MS', sans-serif;
     font-size:calc(12px + 1.25vw);
     text-decoration: none;
 
-    box-shadow: 0px 0px 20px 0px #434142;
-    border: 2px solid #434142;
-    padding: 5px 13px 5px 15px;
-    background: #434142;
+    padding: 0.5rem 1rem;
+    background: #333;
     border-radius: 30px;
-    margin: 20px 2% 0 0;
+    margin: 5vh 6vw;
     color: white;
-    float: right;
+
+    box-shadow: 0 0 5px 0 #333;
 }
 
 
 .content{
-    width:100%;
+    width:100vw;
     height:100vh;
     display: inline-block;
     scroll-snap-type: y mandatory;
+
+    margin-top: 15vh;
 }
 .content .main{
-    width:45%;
     float: left;
-    margin-left: 5%;
-    padding-top: 12.5%;
+    margin-left: 6vw;
     
     font-family: 'Helvetica Neue', sans-serif;
     font-style: normal;
@@ -70,220 +67,143 @@ body{
     color:black;
 }
 .content .second{
-    width: 45%;
     float: right;
-    margin-right: 5%;
-    padding-top: 10%;
+    margin-right: 6vw;
 
-    overflow: hidden;
     text-align: right;
 
-    font-family: Tahoma, sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
     font-size: 1.6vw;
     color:#333;
 }
 
 
-#falecmg {
-    justify-content: center;
-    align-content: center;
+#talk {
+    width:100vw;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
     padding-top: 0;
     grid-gap: 10px;
-    display: inline-grid;
-    width:100%;
+    width:70vw;
     height:80vh;
+    margin: 0 15vw;
 }
-#falecmg *{
-    font-family: "Poppins", sans-serif;
+
+#cards {
+    background-color: black;
+    border-radius: 30px;
+    width:25vw;
+    height:70vh;
+
+    box-shadow: 0 0 10px 0 #333;
+}
+
+#cards h1{
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 10% 0;
+}
+
+#cardButtons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    height: 70%;
+}
+
+#cardButtons a{
+    background-color: #333;
+    border-radius: 30px;
+    width: 75%;
     text-decoration: none;
-    border-radius: 10px;
-    font-size: 3rem;
-    height: 175px;
-    width: 400px;
-    
-}
-#falecmg * h2{
-    height: min-content;
-    width: auto;
-
-    padding-top:13%;
-    padding-right:20%;
-    color:black;
-    float: right;
-}
-#falecmg .instagram h2{
-    padding-right:30%;
-}
-#falecmg .email h2{
-    padding-right:25%;
-}
-#falecmg * img{
-    width: 3rem;
-    height:3rem;
-
-    margin-left: 20%;
-    margin-top: 13%;
-}
-#falecmg a:hover {
-    box-shadow: inset 0 0 2px 2px #C1C1C1;
-}
-#falecmg .twitter{
-    grid-column-start: 1;
-    grid-row-start: 1;
-    
-    background: rgb(21,118,179);
-    background: linear-gradient(135deg, rgba(21,118,179,1) 0%, rgba(29,161,242,1) 30%, rgba(31,169,255,1) 100%);
-}
-#falecmg .instagram{
-    grid-column-start: 2;
-    grid-row-start: 1;
-
-    background: #dc2743;
-    background: linear-gradient(
-        45deg,
-        #f09433 0%,
-        #e6683c 25%,
-        #dc2743 50%,
-        #cc2366 75%,
-        #bc1888 100%)
-}
-#falecmg .github{
-    grid-column-start: 1;
-    grid-row-start: 2;
-
-    background: #F5F5F5;
-    background: linear-gradient(60deg, rgba(29,122,51,1) 0%, rgba(45,187,79,1) 30%, rgba(48,199,83,1) 100%); 
-}
-#falecmg .email{
-    grid-column-start: 2;
-    grid-row-start: 2;
-
-    background: rgb(212,23,17);
-    background: linear-gradient(135deg, rgba(212,52,47,1) 0%, rgba(199,22,16,1) 70%, rgba(135,15,11,1) 100%); 
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 5% 0;
+    box-shadow: 0 0 5px 0 #333;
 }
 
 .footer {
-    filter:drop-shadow(0px 0px 5px #434142);
-    color: #434142;
+    filter:drop-shadow(0px 0px 5px #333);
+    color: #333;
     float:right;
-    padding:0 3% 3% 0;
+    margin:0 6vw 5vh 0;
 }
 
 @media screen and (max-width: 1024px) {
+    #header *{
+        margin: 3vw !important;
+        margin-bottom: 1vh !important;
+    }
+
+    .content{
+        margin: 0;
+    }
     .content .main{
         float: none;
-        width: 100%;
+        width: 100vw;
         font-size: 5rem;
         text-align: center;
 
-        margin-left: 0;
-        padding-top:10%;
+        margin: 0;
     }
     .content .second{
-        width: 100%;
+        width: 100vw;
         font-size: 1.5rem;
         text-align: center;
 
         margin-right: 0;
-        padding-top:5%;
+        margin-top:2vh;
     }
 }
 @media screen and (max-width: 768px) {
+    #header {
+        margin:4vh 0;
+    }
     #header .name{
         font-size: 2rem;
-        margin-left: 0;
-        padding-top: 0;
     }
-    #header .contact{
+    #header .talk{
         font-size: 1rem;
     }
 
     .content .main{
         float: none;
-        width: 100%;
 
         text-align: center;
-        margin-left: 0;
-        padding-top:10%;
+        margin:7vh 0;
         font-size: 3rem;
     }
     .content .second{
-        width: 100%;
         font-size: 1rem;
         text-align: center;
-
-        margin-right: 0;
-        padding-top:10%;
     }
-
-    #falecmg *{
-        height: 100px;
-        width: 320px;
-        font-size: 2rem;
-    }
-    #falecmg .twitter{
-        grid-row-start: 1;
-        grid-column-start: 1;
-    }
-    #falecmg .instagram{
-        grid-row-start: 2;
-        grid-column-start: 1;
-    }
-    #falecmg .github{
-        grid-row-start: 3;
-        grid-column-start: 1;
-    }
-    #falecmg .email{
-        grid-row-start: 4;
-        grid-column-start: 1;
-    }
-    #falecmg * h2{
-        padding-top:10%;
-        padding-right:20%;
-        color:black;
-        float: right;
-    }
-    #falecmg .instagram h2{
-        padding-right:28%;
-    }
-    #falecmg .email h2{
-        padding-right:25%;
-    }
-    #falecmg * img{
-        width: 2rem;
-        height:2rem;
-    
-        margin-left: 20%;
-        margin-top: 10%;
+    .footer {
+        margin:0 3vw 2vh 0;
     }
 }
-
 @media screen and (max-width: 320px) {
     #header .name{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
     .content .main{
-        font-size: 3rem;
-        margin-left: 0;
-        padding-top:5%;
+        font-size: 2rem;
+        margin: 5vh 0;
     }
     .content .second{
         font-size: 1rem;
-        padding-top:5%;
+        margin: 5vh 0;
     }
-    #falecmg {
+    #talk {
         padding-top: 0;
         grid-gap: 5px;
         height: 80vh;
-    }
-    #falecmg *{
-        padding-top: 5px;
-        height:100px;
-        width: 240px;
-        font-size: 1.5rem;
-    }
-    #falecmg * img{
-        width: 1.5rem;
-        height:1.5rem;
     }
 }
