--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-/* Color Theme Swatches in Hex */
-.yellows3-1-hex { color: #434142; }
-.yellows3-2-hex { color: #FFCB05; }
-.yellows3-3-hex { color: #FDD540; }
-.yellows3-4-hex { color: #F2D264; }
-.yellows3-5-hex { color: #C1C1C1; }
-
 * {
     padding: 0;
     margin: 0;
@@ -18,7 +11,6 @@ body{
     min-height: 100vh;
 }
 
-
 #header{
     width:100vw;
 
@@ -28,23 +20,23 @@ body{
 }
 #header .name{
     font-family: 'Helvetica Neue', sans-serif;
-    font-size:calc(12px + 2vw);
+    font-size:2.5vw;
     font-weight: 600;
     margin: 5vh 6vw;
     color: black;
 }
 #header .talk{
     font-family: 'Trebuchet MS', sans-serif;
-    font-size:calc(12px + 1.25vw);
+    font-size:2vw;;
     text-decoration: none;
 
-    padding: 0.5rem 1rem;
+    padding: 0.5vw 1vw;
     background: #333;
-    border-radius: 30px;
+    border-radius: 5vh;
     margin: 5vh 6vw;
     color: white;
 
-    box-shadow: 0 0 5px 0 #333;
+    box-shadow: 0 0 1vh 0 #333;
 }
 
 
@@ -94,7 +86,7 @@ body{
 
 #cards {
     background-color: black;
-    border-radius: 30px;
+    border-radius: 5vh;
     width:25vw;
     height:70vh;
 
@@ -105,7 +97,7 @@ body{
     color: white;
     font-family: 'Trebuchet MS', sans-serif;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     margin: 10% 0;
 }
 
@@ -119,14 +111,14 @@ body{
 
 #cardButtons a{
     background-color: #333;
-    border-radius: 30px;
+    border-radius: 5vh;
     width: 75%;
     text-decoration: none;
     color: white;
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 1.5rem;
     text-align: center;
-    padding: 5% 0;
+    padding: 2.5vh 0;
     box-shadow: 0 0 5px 0 #333;
 }
 
@@ -149,18 +141,22 @@ body{
     .content .main{
         float: none;
         width: 100vw;
-        font-size: 5rem;
+        font-size: 2vw;
         text-align: center;
 
         margin: 0;
     }
     .content .second{
         width: 100vw;
-        font-size: 1.5rem;
+        font-size: 1.5vw;
         text-align: center;
 
         margin-right: 0;
         margin-top:2vh;
+    }
+
+    #cards {
+        width:30vw;
     }
 }
 @media screen and (max-width: 768px) {
@@ -172,6 +168,7 @@ body{
     }
     #header .talk{
         font-size: 1rem;
+        padding: 1vh 3.5vw;
     }
 
     .content .main{
@@ -187,6 +184,26 @@ body{
     }
     .footer {
         margin:0 3vw 2vh 0;
+    }
+
+    #talk {
+        flex-direction: column;
+    }
+
+    #cards {
+        width: 100%;
+        height:50%;
+        box-shadow: none;
+    }
+
+    #cards h1{
+        margin: 5% 0;
+    }
+
+    #cardButtons a{
+        width: 80%;
+        font-size: 1rem;
+        padding: 1.5vh 0;
     }
 }
 @media screen and (max-width: 320px) {
